# advent-of-code-2024

./: .gitignore  CMakeLists.txt  README.md
src/: AdventFactory.cpp  AdventFactory.h  dayConfig.h  main.cpp
src/day01/: Day01.cpp  Day01.h  IdListParser.cpp  IdListParser.h
src/day02/: Day02.cpp  Day02.h  ReportParser.cpp  ReportParser.h
src/include/: AdventDay.cpp  AdventDay.h
test/: registry.test.cpp  test.test.cpp
test/day01/: IdListParser.test.cpp  day01.test.cpp
test/day02/: ReportParser.test.cpp  day02.test.cpp
